Altered gruntfile to add more prefixes. Squashed safari nav layout bug.

--- a/css/sass/nav.scss
+++ b/css/sass/nav.scss
@@ -41,7 +41,8 @@
   .Navigation-logo {
     height: 100%;
     float: left;
-    display: table;
+   // display: table;
+    width: auto;
     position: relative;
     z-index: 9999;
   }
@@ -55,7 +56,7 @@
 
       img{
         height: 75px;
-        margin-top: 5px;
+        margin-top: 12.5px;
       }
     }
 
